# Clock-Configurator

./: CMakeLists.txt  README.md
include/: serialport.h
src/: clock_configurator.cpp  config.ini  serialport.cpp
